@@ -262,6 +262,21 @@ creations/deletions), or "all".</description>
 </property>
 
 <property>
+  <name>dfs.datanode.ipc.address</name>
+  <value>0.0.0.0:50020</value>
+  <description>
+    The datanode ipc server address and port.
+    If the port is 0 then the server will start on a free port.
+  </description>
+</property>
+
+<property>
+  <name>dfs.datanode.handler.count</name>
+  <value>3</value>
+  <description>The number of server threads for the datanode.</description>
+</property>
+
+<property>
   <name>dfs.http.address</name>
   <value>0.0.0.0:50070</value>
   <description>
